--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,43 @@
 .App {
+  display: grid;
   text-align: center;
 }
 
+.categories-list{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+}
 
 .review-grid {
   display: grid;
-  grid-template-columns: 12px 12px 12px;
-  grid-template-rows: 12px 12px 12px;
-  grid-gap: 6px;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  align-content: center;
   justify-items: stretch;
   justify-content: space-around;
-  align-content: center;
   grid-auto-flow: row;
+  
+
+}
+
+.review-card {
+  display: grid;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  background-color: #f8f8f8;
+  align-content:space-between;
+}
+
+.review-card > img{
+  width: 350px;
+  height: 275px;
   
 }
 
-.review-list {
-  display: grid; 
-  grid-gap: 20px;
-  /* flex-wrap: wrap; 
-  list-style-type: none;
-  padding: 0;
-  margin: 0; */
- 
-}
 
-.review-item {
-  flex-basis: 100%; 
-  padding: 10px;
-  border: 1px solid #ccc;
-  background-color: #f8f8f8;
-  grid-template-columns: 12px 12px 12px;
-  grid-template-rows: 12px 12px 12px;
-}
-
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -53,15 +50,4 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
