--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
+
 .App {
   display: grid;
+  width: 100%;
   text-align: center;
   font-family: 'Rubik', sans-serif;
-  ;
 }
 
 .categories-list {
@@ -11,20 +12,25 @@
   justify-content: space-between;
   text-decoration: none;
   list-style: none;
+  padding: 5px;
+  margin-bottom: 20px;
 }
 
+.categories-list li {
+  flex: 0 0 auto;
+  margin-right: 10px;
+  white-space: nowrap;
+}
 
 .review-grid {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   list-style: none;
   align-content: center;
   justify-items: stretch;
   justify-content: space-around;
   grid-auto-flow: row;
-
-
 }
 
 .review-card {
@@ -34,42 +40,36 @@
   border: 1px solid #ccc;
   background-color: #f8f8f8;
   align-content: space-between;
-
 }
 
-.review-card>img {
-  width: 350px;
-  height: 275px;
+.review-card > img {
+  max-width: 100%;
+  height: auto;
   margin: 0 auto;
-
 }
 
-.single-review>h2 {
+.single-review > h2 {
   text-align: justify;
-  margin: 50px;
-  border: #ccc;
-  font-size: xx-large;
-
+  margin: 20px;
+  font-size: 1.5rem;
 }
 
-.single-review>h3 {
+.single-review > h3 {
   text-align: justify;
-  margin: 50px;
-  font-size: large;
-
+  margin: 20px;
+  font-size: 1.2rem;
 }
 
-.single-review>h4 {
+.single-review > h4 {
   text-align: justify;
-  margin: 50px;
-  font-size: medium;
-
+  margin: 20px;
+  font-size: 1rem;
 }
 
-.single-review>p {
+.single-review > p {
   text-align: justify;
-  margin: 30px;
-
+  margin: 15px;
+  font-size: 1rem;
 }
 
 .comments-list {
@@ -77,22 +77,22 @@
   text-align: justify;
 }
 
-.comments-list>h2 {
+.comments-list > h2 {
   text-align: center;
 }
 
-.comment>p {
+.comment > p {
   border-style: outset;
 }
 
 .footer-button {
   font-family: 'Rubik', sans-serif;
-  margin: 35px;
-  font-size: 2.0em;
-  height: 100px;
-  width: 100px;
-
+  margin: 20px;
+  font-size: 2rem;
+  height: 80px;
+  width: 80px;
 }
+
 .votes-review > button {
   height: 40px;
   width: 40px;
@@ -107,4 +107,16 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .review-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .review-grid {
+    grid-template-columns: 1fr;
+  }
 }
